<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/detail"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_empty_star"
                app:tint="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/post_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:lines="1"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/description"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/post_description_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12sp"
            android:fontFamily="@font/roboto_regular"
            android:lines="4"
            android:text="@string/user"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/grayLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/user"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/ic_profile"
                app:tint="@color/purple_700" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/name"
                            android:textAlignment="textStart"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_name_user"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/roboto_regular"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/email"
                            android:textAlignment="textStart"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_email_user"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/roboto_regular"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/phone"
                            android:textAlignment="textStart"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_phone_user"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/roboto_regular"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/website"
                            android:textAlignment="textStart"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_website_user"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/roboto_regular"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/grayLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/comments"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
